-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9, 21, 23, 24
-
Component/s: client-libs
The JNI method Java_sun_awt_windows_WTaskbarPeer_setOverlayIcon calls CreateIconFromRaster that can throw a C++ exception.
The C++ exception must be caught and must not be allowed to escape the JNI method. The call to CreateIconFromRaster has to wrapped into a try-catch block.
Found this problem in code review [1] forJDK-8282862.
[1] https://github.com/openjdk/jdk/pull/22932#issuecomment-2602772897
The C++ exception must be caught and must not be allowed to escape the JNI method. The call to CreateIconFromRaster has to wrapped into a try-catch block.
Found this problem in code review [1] for
[1] https://github.com/openjdk/jdk/pull/22932#issuecomment-2602772897
- relates to
-
JDK-8143227 Platform-specific desktop features
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk/39cb493c
-
Review(master)
openjdk/jdk/23470