8348106: Catch C++ exception in Java_sun_awt_windows_WTaskbarPeer_setOverlayIcon